Fix wrong draghandle styles in type-default and type-highcontrast themes. Closes telerik/kendo-ui-core#1969

--- a/styles/web/type-default.less
+++ b/styles/web/type-default.less
@@ -59,10 +59,10 @@
 @validation-border-color: @warning;
 @splitbar-background-color: saturate(@base, 1%);
 @draghandle-border-radius: 7px;
-@draghandle-border-color: darken(@success, 20%);
+@draghandle-border-color: @button-border-color;
 @draghandle-background-color: lighten(@base, 15%);
 @draghandle-shadow: none;
-@draghandle-hover-border-color: darken(@success, 23%);
+@draghandle-hover-border-color: @button-hover-border-color;
 @draghandle-hover-background-color: desaturate(@hover-background, 2%);
 @draghandle-hover-shadow: none;
 @alt-background-color: contrast(@base, lighten(@background, 3%), lighten(@base, 3%), 0.5);
